@@ -2551,7 +2551,7 @@ F:ESP_UNIQUE
 F:SLOW_DIGEST | SHOW_MODS | SEE_INVIS | RES_DISEN
 F:FREE_ACT | RES_NETHER | HOLD_LIFE
 F:SUST_STR | SUST_DEX | SUST_CON | 
-F:ANTIMAGIC_20 | DRAIN_MANA
+F:ANTIMAGIC_20 | ANTIMAGIC_50 | DRAIN_MANA
 # | NO_MAGIC
 
 #N:(No.):(name)
