@@ -1143,6 +1143,8 @@ R:100
 F:SLAY_UNDEAD | SEE_INVIS | HOLD_LIFE | DRAIN_HP
 F:ACTIVATE
 
+# they are rarer now, so that auto and non-drop curse won't
+# annoy players too much.
 N:103:of Morgul
 T:125:0:255
 T:21:0:255
@@ -1150,7 +1152,8 @@ T:22:0:255
 T:23:0:255
 T:24:0:255
 X:A:24:0
-W:0:1:1:0
+#W:0:1:1:0
+W:0:1:5:0
 C:-20:-20:-10:-10
 R:100
 F:LUCK
@@ -1165,7 +1168,8 @@ T:22:0:255
 T:23:0:255
 T:24:0:255
 X:A:24:0
-W:0:1:2:0
+#W:0:1:2:0
+W:0:1:8:0
 C:-100:-100:0:0
 R:100
 F:NEVER_BLOW | HEAVY_CURSE | CURSED | AUTO_CURSE
