@@ -1,5 +1,5 @@
 N:*:Default
-570
+573
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -570,7 +570,8 @@ They say that you should learn to shoot yeeks.
 They say that even a level-100 priest might need potions of wisdom still.
 They say that antimagic shell is something other than antimagic shield.
 They say that amulet of anti-magic doesn't give antimagic shield.
-They say that 
-They say that 
+Behold the eyes! Eye the Beholders!
+They say that you should bring some fine wine when invited to an elven dinner.
+They say that if you see a {vm {won the top of dungeon, just don't touch it.
 They say that 
 They say that 
