@@ -604,10 +604,11 @@ Change list for PernMangband
 - "Kings' etiquette" is coded in. (optional)
 
 4/1/2001 (Jir)
+** [B] stands for Bugfix.
 - monster-move code ameliorated (!STUPID_MONSTERS)
 - some monsters will prefer to keep distance (even STUPID_MONSTER is on).
 - new monsters with DISBELIEVE power (eg. Unbeliever).
 - yaac(Yet Another Anti-Cheeze): lowbies' arrows won't drop on floor.
 - antimagic shield of party member disturbs spellcasting less.
 - use of magic-device is penalized according to the antimagic power(and not 0)
-
+[B] antimagic of weapon was not counted.
